add comments - search feature - tags feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <div class = "input-container">
             <input type="text" id="bookmark-name" placeholder = "Bookmark Name">
             <input type="text" id="bookmark-url" placeholder = "Bookmark Url">
+            <input type="text" id="bookmark-tag" placeholder = "Tag (optional)">
             <button id="add-bookmark"> Add Bookmark </button>
+        </div>
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search by name or tag">
         </div>
         <ul id="bookmark-list">
 
