Add sorting functionality for bookmarks
- Added sort buttons for alphabetical (A-Z, Z-A) and date-based sorting (newest/oldest)
- Implemented applySorting() function to handle different sort modes
- Added timestamp tracking (addedAt) to bookmarks for date-based sorting
- Added attachSortListeners() function to manage sort button event listeners
- Updated renderBookmarks() to apply sorting based on current sort mode
- Added sort-container styling for responsive button layout

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <div class="search-container">
             <input type="text" id="search-input" placeholder="Search by name or tag">
         </div>
+        <div class="sort-container">
+            <button id="sort-alphabetical-asc">Sort A-Z</button>
+            <button id="sort-alphabetical-desc">Sort Z-A</button>
+            <button id="sort-date-newest">Newest First</button>
+            <button id="sort-date-oldest">Oldest First</button>
+        </div>
         <ul id="bookmark-list">
 
         </ul>
